[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-controller"
version = "0.1.0"
description = "Interactive V4L2 camera controller with setup UI and OpenCV preview."
requires-python = ">=3.10"
dependencies = ["opencv-python>=4.8"]

[project.scripts]
camera-controller = "camera_controller.controller:launch"

[tool.setuptools]
packages = ["camera_controller"]

[tool.setuptools.package-dir]
camera_controller = "."
